--- a/static/index.html
+++ b/static/index.html
@@ -8,7 +8,7 @@
 <style>
 body {
     font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-    background: linear-gradient(135deg, #0f2027, #203a43, #2c5364);
+    background: linear-gradient(135deg, #1e3c72, #2a5298);
     margin: 0; padding: 0;
     text-align: center;
     color: #fff;
@@ -36,6 +36,7 @@ header {
     padding: 25px;
     width: 220px;
     transition: transform 0.3s ease, box-shadow 0.3s ease;
+    position: relative;
 }
 .card:hover {
     transform: translateY(-8px);
@@ -61,6 +62,21 @@ header {
 }
 .pump-on { color: #00ff00; text-shadow: 0 0 15px rgba(0,255,0,0.7); }
 .pump-off { color: #ff1744; text-shadow: 0 0 15px rgba(255,23,68,0.7); }
+.gauge {
+    width: 100%;
+    height: 15px;
+    background: rgba(255,255,255,0.2);
+    border-radius: 10px;
+    overflow: hidden;
+    margin-top: 10px;
+}
+.gauge-fill {
+    height: 100%;
+    width: 0%;
+    background: #00ffcc;
+    border-radius: 10px;
+    transition: width 0.5s ease;
+}
 footer {
     margin-top: 40px;
     padding: 20px;
@@ -78,14 +94,17 @@ footer {
     <div class="card">
         <h2><i class="fas fa-sun"></i> Light Level</h2>
         <div id="ldr" class="value">--</div>
+        <div class="gauge"><div id="ldr-gauge" class="gauge-fill"></div></div>
     </div>
     <div class="card">
         <h2><i class="fas fa-thermometer-half"></i> Temperature</h2>
         <div id="temp" class="value">-- °C</div>
+        <div class="gauge"><div id="temp-gauge" class="gauge-fill"></div></div>
     </div>
     <div class="card">
         <h2><i class="fas fa-tint"></i> Humidity</h2>
         <div id="humidity" class="value">-- %</div>
+        <div class="gauge"><div id="humidity-gauge" class="gauge-fill"></div></div>
     </div>
     <div class="card">
         <h2><i class="fas fa-water"></i> Pump Status</h2>
@@ -100,14 +119,22 @@ async function updateData() {
     const response = await fetch('/data');
     const data = await response.json();
 
-document.getElementById('ldr-bar').style.width = (data.ldr / 1023 * 100) + '%';
+    // Update numbers
+    document.getElementById('ldr').innerText = data.ldr;
     document.getElementById('temp').innerText = data.temperature + " °C";
     document.getElementById('humidity').innerText = data.humidity + " %";
 
+    // Update pump
     const pumpEl = document.getElementById('pump');
     pumpEl.innerText = data.pump;
     pumpEl.className = "value " + (data.pump === "ON" ? "pump-on" : "pump-off");
+
+    // Update gauges (normalized)
+    document.getElementById('ldr-gauge').style.width = (data.ldr / 1023 * 100) + '%';
+    document.getElementById('temp-gauge').style.width = (data.temperature ? (data.temperature / 50 * 100) : 0) + '%';
+    document.getElementById('humidity-gauge').style.width = (data.humidity ? data.humidity : 0) + '%';
 }
+
 setInterval(updateData, 2000);
 updateData();
 </script>
