--- a/static/index.html
+++ b/static/index.html
@@ -4,8 +4,8 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Smart Environment Monitor</title>
-<link rel="stylesheet" href="styles.css">
-<script src="scripts.js"></script>
+<link rel="stylesheet" href="/static/styles.css">
+<script src="/static/scripts.js"></script>
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
