--- a/static/index.html
+++ b/static/index.html
@@ -9,7 +9,11 @@
 <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" rel="stylesheet">
 </head>
 <body>
-<header>Smart Environment Dashboard</header>
+<header>
+    <span>🌱 Smart Environment Dashboard</span>
+    <i id="theme-toggle" class="fas fa-moon"></i>
+</header>
+
 
 <div class="container">
     <div class="card">
